--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ title = "Alexander Kutsan"
 description = "Software engeneer"
 
 # The URL the site will be built for
-base_url = "http://localhost:8000"
+base_url = "https://alexkutsan.github.io"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
